UPDATE : UI 작업 중, 패키지 이동, 컴포넌트 분리

--- a/jwt-auth-front/src/styles/global.scss
+++ b/jwt-auth-front/src/styles/global.scss
@@ -33,6 +33,18 @@ input {
   color: inherit;
 }
 
+hr {
+  width: 100%;
+  height: 0.2px;
+  color: $white-gray;
+  background-color: $white-gray;
+  border: none;
+}
+
+.bold {
+  font-family: $font-bold;
+}
+
 // header
 .header {
   display: flex;
