--- a/jwt-auth-front/src/styles/common.scss
+++ b/jwt-auth-front/src/styles/common.scss
@@ -35,10 +35,33 @@ $font-ext: Pretendard-ExtraBold, serif;
 
 // colors
 $main-color: #ff4800;
-$sub-color: #0c0e36;
+$sub-color: #0e114d;
 $hover-color: #ffae00;
 $font-color: #272727;
 $accent-color: #fc0202;
-$gray: #7e7d82;
-$white-gray: #dbdbdb; // footer background
+$gray: #868e96;
+$white-gray: #dee2e6; // footer background
 $white: #fcfcfc;
+
+// media query
+$breakpoint-mobile: 335px;
+$breakpoint-tablet: 758px;
+$breakpoint-desktop: 1024px;
+
+@mixin mobile {
+  @media (min-width: #{$breakpoint-mobile}) and (max-width: #{$breakpoint-tablet - 1px}) {
+    @content;
+  }
+}
+
+@mixin tablet {
+  @media (min-width: #{$breakpoint-tablet}) and (max-width: #{$breakpoint-desktop - 1px}) {
+    @content;
+  }
+}
+
+@mixin desktop {
+  @media (min-width: #{$breakpoint-desktop}) {
+    @content;
+  }
+}
