--- a/jwt-auth-front/src/styles/global.scss
+++ b/jwt-auth-front/src/styles/global.scss
@@ -54,6 +54,7 @@ hr {
   background: $sub-color;
   color: $white;
   padding: 1.8rem;
+  z-index: 99;
 
   a {
     display: flex;
@@ -156,12 +157,18 @@ hr {
 .container {
   display: flex;
   justify-content: center;
+  flex-direction: column;
   width: 100%;
-  height: 80vh;
 }
 
 // layout container
 .layout {
   display: flex;
   flex-direction: column;
+}
+
+.banner {
+  width: 100%;
+  height: 300px;
+  background: $white-gray;
 }
