--- a/jwt-auth-front/src/styles/member/member.scss
+++ b/jwt-auth-front/src/styles/member/member.scss
@@ -5,44 +5,57 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 1.2rem;
+  align-items: center;
+  padding: 1rem;
 
-  .form-title {
-    flex-grow: 0;
-    font-size: 1.8rem;
-    font-weight: bold;
-    margin-bottom: 1.2rem;
-    text-align: center;
-  }
-
-  .form-info {
-    text-align: center;
-    color: $gray;
-  }
-  // input
-  .form-input {
+  .form-div {
     display: flex;
     flex-direction: column;
+    width: 320px;
+    padding: 1rem;
 
-    .form-join {
-      margin: 0.7rem 0 0 0;
+    .form-title {
+      flex-grow: 0;
+      font-size: 1.8rem;
+      font-weight: bold;
+      margin-bottom: 1.2rem;
       text-align: center;
-      font-size: 0.9rem;
+    }
+
+    .form-info {
+      text-align: center;
       color: $gray;
     }
+    // input
+    .form-input {
+      display: flex;
+      flex-direction: column;
 
-    .form-join:hover {
-      text-decoration: underline;
-    }
+      .form-join {
+        margin-top: 0.6rem;
+        text-align: center;
+        font-size: 0.9rem;
+        color: $gray;
+      }
 
-    .form-input-name {
-      margin-bottom: 1rem;
+      .form-join:hover {
+        text-decoration: underline;
+      }
 
-      p {
-        margin-bottom: 0.4rem;
+      .form-input-div {
+        display: flex;
+        flex-direction: column;
 
-        span {
-          color: $accent-color;
+        p {
+          margin-bottom: 0.4rem;
+
+          span {
+            color: $accent-color;
+          }
+        }
+
+        input {
+          margin-bottom: 1rem;
         }
       }
     }
@@ -51,4 +64,20 @@
   //   .form-grow {
   //     flex-grow: 0;
   //   }
+}
+
+.login {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  height: 100vh;
+}
+
+.modify {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  height: 100vh;
 }
