--- a/jwt-auth-front/src/styles/qna/answer.scss
+++ b/jwt-auth-front/src/styles/qna/answer.scss
@@ -12,8 +12,9 @@
 
   .answer-info {
     width: 100%;
-    display: flex;
+    display: grid;
     flex-direction: row;
+    grid-template-columns: 0.2fr 4fr 2fr;
     align-items: center;
 
     .answer-icon {
@@ -22,12 +23,44 @@
       padding: 0.8rem;
       color: $sub-color;
     }
+
     .answer-writer {
       margin-bottom: 0.2rem;
     }
+
     .answer-date {
       color: $gray;
       font-size: 0.9rem;
+    }
+
+    .answer-btn {
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-end;
+      align-items: center;
+
+      button {
+        display: flex;
+        align-items: center;
+        border: none;
+        border-radius: 6px;
+        padding: 0.4rem;
+        margin-top: 0.4rem;
+        font-size: 1rem;
+        color: $gray;
+        background: none;
+        transition: 0.2s;
+      }
+
+      button:first-child {
+        margin-right: 6px;
+      }
+
+      button:hover {
+        color: $font-color;
+        background: $white-gray;
+        transition: 0.2s;
+      }
     }
   }
 
@@ -36,11 +69,6 @@
     color: $gray;
     font-size: 1rem;
   }
-}
-
-.comment {
-  display: flex;
-  flex-direction: column;
 }
 
 @include mobile {
@@ -59,4 +87,13 @@
   .answer {
     width: 60%;
   }
+}
+
+.answer-container {
+  display: flex;
+  height: 100vh;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  // margin: 300px 0 300px 0;
 }
