--- a/jwt-auth-front/src/styles/qna/qna.scss
+++ b/jwt-auth-front/src/styles/qna/qna.scss
@@ -3,17 +3,30 @@
 // qna.scss
 .qna {
   width: 100%;
-  height: 80vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 2rem 0 2rem 0;
+  margin: 200px 0 200px 0;
+}
+
+.comment-title {
+  flex-grow: 0;
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin-bottom: 0.4rem;
 }
 
 .comment {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  margin-top: 2rem;
+
+  textarea {
+    padding: 1rem;
+    width: 100%;
+  }
 }
 
 @include mobile {
