--- a/jwt-auth-front/src/styles/qna/question.scss
+++ b/jwt-auth-front/src/styles/qna/question.scss
@@ -6,15 +6,14 @@
   flex-direction: column;
   align-items: center;
   padding: 1rem;
-  margin: 0.4rem 0 0.4rem 0;
+  margin: 20px 0 20px 0;
   border-radius: 10px;
   border: 1px solid $white-gray;
 
   .quest-info {
     width: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+    display: grid;
+    grid-template-columns: 0.2fr 4fr 2fr;
     margin: 1rem 0 1rem 0;
 
     .quest-icon {
@@ -23,17 +22,53 @@
       padding: 0.8rem;
       color: $main-color;
     }
+
     .quest-writer {
       margin-bottom: 0.2rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
     }
+
     .quest-title {
       font-size: 1.4rem;
       font-family: $font-bold;
       margin-bottom: 0.2rem;
     }
+
     .quest-date {
       color: $gray;
       font-size: 0.9rem;
+    }
+
+    .quest-btn {
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-end;
+      align-items: center;
+
+      button {
+        display: flex;
+        align-items: center;
+        border: none;
+        border-radius: 6px;
+        padding: 0.4rem;
+        margin-top: 0.4rem;
+        font-size: 1rem;
+        color: $gray;
+        background: none;
+        transition: 0.2s;
+      }
+
+      button:first-child {
+        margin-right: 6px;
+      }
+
+      button:hover {
+        color: $font-color;
+        background: $white-gray;
+        transition: 0.2s;
+      }
     }
   }
 
