--- a/jwt-auth-front/src/styles/qna/upload.scss
+++ b/jwt-auth-front/src/styles/qna/upload.scss
@@ -3,12 +3,11 @@
 //upload.scss
 .upload {
   width: 100%;
-  height: 80vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 2rem 0 2rem 0;
+  margin: 100px 0 100px 0;
 }
 
 .upload-title {
@@ -21,7 +20,8 @@
 
 @include mobile {
   .upload {
-    input {
+    input,
+    textarea {
       width: 80%;
     }
   }
@@ -29,7 +29,8 @@
 
 @include tablet {
   .upload {
-    input {
+    input,
+    textarea {
       width: 70%;
     }
   }
@@ -37,7 +38,8 @@
 
 @include desktop {
   .upload {
-    input {
+    input,
+    textarea {
       width: 60%;
     }
   }
